# persona

./: .gitignore  AGENTS.md  README.md  mcp_config.json.sample  pyproject.toml
src/persona/: cli.py  commands.py  repl.py
src/persona/agent/: builder.py
src/persona/skills/: parser.py
tests/: test_mcp.py
