[project]
name = "persona"
version = "0.1.0"
description = "A universal AI agent CLI with Anthropic-style skills"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "logfire>=2.0.0",
    "pydantic-ai>=1.63.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "platformdirs>=4.0.0",
]

[project.scripts]
persona = "persona.cli:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pydantic-evals>=0.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/persona"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/skills",
    "/instructions.md",
    "/.env.example",
]
